crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/015.cypher
MATCH (n) DELETE n; MATCH (m) RETURN m
